need to fix word padding and word split IDs, so that the keyboard below doesn't look like it's overlapping.

--- a/src/Project/JqueryTyping/css/style.css
+++ b/src/Project/JqueryTyping/css/style.css
@@ -12,6 +12,7 @@ body {
     height: 120px;
     padding-right:150px;
     padding-left:150px;
+    padding-bottom:200px;
 
 
 }
